src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

::selection {
    background-color: #f3f4f6;
    color: #1f2937;
}

#__next {
    height: min-content;
    min-height: 100%;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    position: relative;
}

@keyframes floatIn {
    0% {
        transform: translateY(-10px);
        opacity: 0;
    }
    100% {
        transform: translateY(0);
        opacity: 1;
    }
}

@keyframes dropIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@keyframes dropIn {
    0% {
        opacity: 0;
        transform: translateY(-100%);
    }
    100% {
        transform: translateY(0%);
        opacity: 1;
    }
}

.fade-in {
    animation: dropIn 0.25s ease-in;
}

.btn-shadow {
    box-shadow: 0px 3.3px 2.2px rgba(0, 0, 0, 0.066),
        0px 8px 5.3px rgba(0, 0, 0, 0.08), 0px 15.2px 10px rgba(0, 0, 0, 0.084),
        0px 27px 17.9px rgba(0, 0, 0, 0.082),
        0px 50.6px 33.4px rgba(0, 0, 0, 0.077),
        0px 121px 80px rgba(0, 0, 0, 0.07);
}

@media (prefers-color-scheme: light) {
    .noise {
        filter: invert(1);
    }
}

#__next::after {
    background-repeat: repeat;
    pointer-events: none;
    content: ' ';
    background-image: url(/NOISE.webp);
    background-position: 0px 0px;
    background-size: 250px;
    opacity: 0.15;
    left: 0%;
    top: 0%;
    z-index: -20;
    width: 100%;
    display: block;
    position: absolute;
    height: 100%;
}

@media (prefers-color-scheme: light) {
    #__next::after {
        filter: invert(1);
    }
}

@keyframes fade-in {
    0% {
        opacity: 0;
        transform: translateY(-0.25rem);
    }
    100% {
        opacity: 1;
    }
}
/* ... */

